docs: Change URL mappings to use single quotes

--- a/.env.sample
+++ b/.env.sample
@@ -375,11 +375,11 @@ LOG_TIMEZONE=Etc/UTC
 # Configure URL mappings for rerouting outgoing requests and adjusting stream URLs
 # ----- Request URL Mappings -------
 # Configure URL Mappings for outgoing requests. e.g. reroute requests to https://aiostreams.example.com to http://localhost:3000
-# REQUEST_URL_MAPPINGS=`{"https://aiostreams.example.com": "http://localhost:3000"}`
+# REQUEST_URL_MAPPINGS='{"https://aiostreams.example.com": "http://localhost:3000"}'
 
 # ---- Stream URL Mappings -----
 # Configure adjustments to stream URLs. e.g convert stream URLs with http://localhost:3000 as the base URL to https://aiostreams.example.com
-# STREAM_URL_MAPPINGS=`{"http://localhost:3000": "https://aiostreams.example.com"}`
+# STREAM_URL_MAPPINGS='{"http://localhost:3000": "https://aiostreams.example.com"}'
 
 
 # ==============================================================================
